--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <h2>builds</h2>
-<a href="itms-services://?action=download-manifest&url=http://le2ci09pypaoa5ldrur4zq-on.drv.tw/web/IPA/mainfest.plist"> App</a></body>
+<a href="itms-services://?action=download-manifest&url=http://raw.githack.com/Rappy13/baihanapp.giyhub.io/main/manifest.plist"> App</a></body>
 </body>
 </html>
